--- a/client-side/public/index.html
+++ b/client-side/public/index.html
@@ -29,7 +29,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <title>React App</title>
   </head>
   <body>
